<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/strElecMeter"
            android:id="@+id/textView6"
            android:textSize="@dimen/txtSize"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtEMeterStart"
            android:layout_weight="1" />

    </LinearLayout>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtElecMeter"
        android:textSize="@dimen/txtSize"
        android:hint="@string/strUnit"
        android:inputType="number" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/strWaterMeter"
            android:id="@+id/textView7"
            android:textSize="@dimen/txtSize"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtWMeterStart"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtWaterMeter"
        android:textSize="@dimen/txtSize"
        android:hint="@string/strUnit"
        android:inputType="number" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strPhoneAmt"
        android:id="@+id/textView8"
        android:textSize="@dimen/txtSize"
        android:textStyle="bold" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtPhone"
        android:hint="@string/strAmt"
        android:textSize="@dimen/txtSize"
        android:inputType="number" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strOtherAmt"
        android:id="@+id/textView9"
        android:textSize="@dimen/txtSize"
        android:textStyle="bold" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtOther"
        android:hint="@string/strAmt"
        android:textSize="@dimen/txtSize"
        android:inputType="number" />

</LinearLayout>