<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/strMeter"
            android:onClick="clickMeter"
            android:id="@+id/btnMeter"
            android:textSize="@dimen/btnTextSize"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/strPrint"
            android:onClick="clickPrint"
            android:id="@+id/btnPrint"
            android:textSize="@dimen/btnTextSize"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/strApt"
            android:onClick="clickApt"
            android:id="@+id/btnApt"
            android:textSize="@dimen/btnTextSize"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/strRoom"
            android:onClick="clickRoom"
            android:id="@+id/btnRoom"
            android:textSize="@dimen/btnTextSize"
            android:layout_margin="10dp" />
    </LinearLayout>

</RelativeLayout>
