<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="th.jack.jirawuts.miniapartment.RentalPrintActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:weightSum="3"
        android:dividerPadding="@dimen/abc_control_padding_material">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAllRoom"
            android:id="@+id/chbAllRoom"
            android:onClick="onChbClick"
            android:longClickable="false"
            android:textSize="@dimen/txtSize"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="5"
            android:layout_weight="1"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/strRoomFrom"
                android:id="@+id/textView10"
                android:layout_weight="1.75"
                android:textSize="@dimen/txtSize" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spnRoomFrom"
                android:layout_weight="1.25" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/strRoomTo"
                android:id="@+id/textView11"
                android:textSize="@dimen/txtSize"
                android:layout_weight="0.75" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spnRoomTo"
                android:layout_weight="1.25" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:weightSum="2">

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spnMonth"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spnYear"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrint"
            android:onClick="printRental"
            android:id="@+id/btnPrint"
            android:layout_margin="10dp"
            android:hint="test"
            android:textSize="@dimen/btnTextSize" />

    </LinearLayout>

</RelativeLayout>
